--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <ul>
          <li><a href="recipe/fajitas.html">fajitas</li>
             <li><a href="recipe/roast.html">roast dinner</li>
-            <li><a href="recipe/schnauzer.html>schnauzer.html">schnauzer</a></li>
+            <li><a href="recipe/schnauzer.html">schnauzer</a></li>
         </ul>
     </Body>
 </html>
